Fix alignment in mobile

--- a/app/assets/stylesheets/media/_mobile.scss
+++ b/app/assets/stylesheets/media/_mobile.scss
@@ -326,6 +326,11 @@
         margin-top: 2em;
         min-height: auto !important;
       }
+
+      div.event-flags > div {
+        text-indent: 0;
+        padding-left: 0;
+      }
     }
 
     div.event-column-right {
